# -AI_process_simulator

./: .editorconfig  CMakeLists.txt  CMakeLists_threaded_v2.txt  CMakePresets.json  CMakeSettings.json.bak  CMakeUserPresets.json  HYSYS_stream_thermo_and_component_assignment_report.docx  README.md  qml.qrc  rebuild.ps1
Run_Results/: WCS_crude_React-solver-extrtaction.txt  WCS_crude_after_Claude.txt
UML/: 01_migration-detailed.mmd.txt  01_migration-printable.mmd.txt  02_app_structure-printable.mmd.txt  03_column_subsystem-detailed.mmd.txt  03_column_subsystem-printable.mmd.txt
cpp/: AppState.cpp  AppState.h  AppTheme.h  main.cpp
cpp/common/models/: MessageLog.cpp  MessageLog.h  RunLogModel.cpp  RunLogModel.h
cpp/components/: ComponentListRecord.cpp  ComponentListRecord.h  ComponentManager-old.h  ComponentManager.cpp  ComponentManager.h  ComponentRecord.cpp  ComponentRecord.h
cpp/components/data/: hydrocarbon_starter_components.json
cpp/components/models/: CompGroupListModel-old.cpp  CompGroupListModel-old.h  CompGroupListModel.cpp  CompGroupListModel.h  ComponentListModel.cpp  ComponentListModel.h
cpp/flowsheet/: UnitNode.h
cpp/flowsheet/models/: FlowsheetStatusModel.cpp  FlowsheetStatusModel.h  FlowsheetUnitModel-old.cpp  FlowsheetUnitModel-old.h  FlowsheetUnitModel.cpp  FlowsheetUnitModel.h
cpp/flowsheet/state/: FlowsheetState-old.cpp  FlowsheetState-old.h  FlowsheetState.cpp  FlowsheetState.h  ProcessUnitState-old.cpp  ProcessUnitState-old.h  ProcessUnitState.cpp  ProcessUnitState.h  UnitRegistry.cpp
cpp/fluid/: FluidPackageManager-old.cpp  FluidPackageManager-old.h  FluidPackageManager.cpp  FluidPackageManager.h  FluidPackageRecord-old.cpp  FluidPackageRecord.cpp  FluidPackageRecord.h
cpp/fluid/models/: FluidPackageListModel.cpp  FluidPackageListModel.h
cpp/lib/sim/: ColumnSolver.cpp  ColumnSolver.hpp  CounterCurrentColumnSimulator.cpp  CounterCurrentColumnSimulator.hpp
cpp/lib/thermo/: EOSK.cpp  EOSK.hpp  Enthalpy.cpp  Enthalpy.hpp  Flash.cpp  PHFlash.cpp  PHFlash.hpp  ThermoTypes.hpp
cpp/lib/thermo/eos/: PRSV.cpp  PRSV.hpp  SRK.hpp
cpp/lib/thermo/pseudocomponents/: componentData.cpp  componentData.hpp  loaders.hpp  pseudoComponents.cpp  pseudoComponents.hpp
cpp/lib/util/: LogLevel.hpp
cpp/models/: DiagnosticsModel.cpp  DiagnosticsModel.h  MaterialBalanceModel.cpp  MaterialBalanceModel.h  RunLogModel.cpp  TrayModel.h
cpp/streams/models/: StreamCompositionModel-old.cpp  StreamCompositionModel.cpp  StreamCompositionModel.h
cpp/streams/qml/: StreamCompositionPanel-old.qml  StreamCompositionPanel.qml  StreamConditionsPanel.qml  StreamPhasesPanel.qml  StreamPropertiesPanel.qml  StreamView.qml  StreamWorkspaceWindow.qml
cpp/streams/state/: MaterialStreamState-old.h  MaterialStreamState.cpp  MaterialStreamState.h  StreamUnitState.cpp  StreamUnitState.h
cpp/thermo/: EOSK.cpp  EOSK.hpp  Enthalpy.cpp  Enthalpy.hpp  Entropy.cpp  Entropy.hpp  Flash.cpp  Flash.hpp  PH_PS_PT_TS_Flash.cpp  PH_PS_PT_TS_Flash.hpp  PH_PT_Flash.cpp  PH_PT_Flash.hpp  StreamPropertyCalcs-old.cpp  StreamPropertyCalcs.cpp  StreamPropertyCalcs.hpp  ThermoConfig.cpp  ThermoConfig.hpp  ThermoTypes.hpp
cpp/thermo/eos/: PR.cpp  PR.hpp  PRSV.hpp  SRK.cpp
cpp/thermo/pseudocomponents/: FluidDefinition.cpp  FluidDefinition.hpp  componentData.hpp  loaders.cpp
cpp/unitops/column/config/: CrudeInitialSettings.cpp  CrudeInitialSettings.hpp
cpp/unitops/column/models/: RunLogModel.h  TrayModel.cpp  TrayModel.h
cpp/unitops/column/qml/: ColumnDiagnosticsPanel.qml  ColumnDrawsPanel.qml  ColumnPerformancePanel.qml  ColumnProductsPanel.qml  ColumnProfilesPanel.qml  ColumnRunLogPanel.qml  ColumnRunResultsPanel.qml  ColumnSetupPanel.qml  ColumnView.qml  ColumnWorkspaceWindow.qml  DiagnosticsPanel.qml  DistillationColumn-old.qml  DistillationColumn.qml  DrawConfigView.qml  HysysColumnMockup-old.qml  HysysColumnMockup.qml  MaterialBalanceView.qml  RunLogView.qml  SpecsPanel.qml
cpp/units/: FormatRegistry.cpp  FormatRegistry.h  UnitRegistry.cpp  UnitRegistry.h
icons/qml/: Main.qml
icons/qml/pfd/: EquipmentPalette.qml  PfdCanvas-old.qml  PfdCanvas.qml  PfdMainView.qml  UnitNodeItem-old.qml  UnitNodeItem.qml
icons/svg/Equip_Palette/: .$Distillation_Column.svg.bkp
qml/: Main.qml
qml/common/: ClassicButton.qml  ClassicTabs.qml  PButton.qml  PCheckBox.qml  PComboBox.qml  PConfirmDialog.qml  PGridLabel.qml  PGridSection.qml  PGridUnit.qml  PGridValue.qml  PGroupBox.qml  PListItem.qml  PMessageDialog.qml  PPropertyView.qml  PSpinner.qml  PSpreadsheet.qml  PTabBar.qml  PTextField.qml  UnitPicker.qml  UnitToken.qml
qml/components/: ColumnView.qml  ComponentManagerView-old.qml  ComponentManagerView.qml  HysysColumnMockup.qml  MaterialBalanceView.qml  RunLogView.qml  RunResultsView.qml  RunSummaryView.qml  SpecsPanel.qml  TrayRow.qml
qml/displaySettings/: DisplaySettingsPanel.qml
qml/fluid/: FluidManagerView-old.qml  FluidManagerView.qml
qml/pfd/: AppTheme.qml  EquipmentPalette-old.qml  EquipmentPalette.qml  FloatingPanel-old.qml  FloatingPanel.qml  MessagesDock.qml  MessagesPanel.qml  PfdCanvas-old.qml  PfdCanvas.qml  PfdMainView-old.qml  PfdMainView.qml  StatusPanel.qml  UnitNodeItem-old.qml  UnitNodeItem.qml  UnitPalette.qml
qml/spreadsheet/: SimpleSpreadsheet-old.qml  SimpleSpreadsheet.qml  SpreadsheetView.qml  SpreadsheetWorkspaceWindow.qml
tests/: CMakeLists.txt  RunResultsParser.cpp  RunResultsParser.hpp  TestCrudeCases.hpp  TestData-old.hpp  TestData.hpp  ThermoRoundTripCommon.hpp  runresults_to_json_main.cpp  test_benzene_toluene_column.cpp  test_column_runresults_regression.cpp  test_invariants.cpp  test_main.cpp  test_thermo_roundtrip.cpp  thermo_regression_main.cpp
tests/baselines/: arab_light_baseline.json  arab_light_run_results.txt  arab_light_solver_inputs.json  brent_baseline.json  brent_run_results.txt  brent_solver_inputs.json  venezuelan_heavy_baseline.json  venezuelan_heavy_run_results.txt  venezuelan_heavy_solver_inputs.json  wcs_baseline.json  wcs_run_results.txt  wcs_solver_inputs.json  wti_baseline.json  wti_run_results.txt  wti_solver_inputs.json
(+48 files in other folders)
